--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,11 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "**/*.j"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "src/app/shadcnComp/**/*.ts"
+  ]
 }
