--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "src/app/components",
-    "utils": "src/app/lib/utils"
+    "components": "src/app/_components/components",
+    "utils": "@/lib/utils"
   }
 }
